tests/NormalTests/paczka1/small_fuzzy/50212109.err
Error in line 1: npew S129 94,1
Error in line 4: PsK4D3y1pn7 S129 32,7
